ui/css/treeherder.css
/* ... */
/*
 * resizer
 */
div#bottom-panel-resizer {
    display: flex;
    flex: none;
    -webkit-flex: none;
    background-color: #919dad;
    cursor: ns-resize;
    height: 2px;
}


/*
 * bottom panel
 */

div#bottom-panel {
    background-color: #AAAAAA;
    font-size: 12px;

    height: 35%;
    max-height: 75%;
    flex: none;
    -webkit-flex: none;

    display: -webkit-flex;
    display:         flex;
    -webkit-flex-flow: column;
    flex-flow: column;
}

div#bottom-panel .navbar{
    border-radius: 0px;
    border-style: solid;
    border-color: #42484F;
    border-width:1px 0;
    height:33px;
    margin:0;
    font-size:12px;
    min-height: 33px;
    min-width: initial;
    z-index: 100;
}

div#bottom-panel .navbar-nav > ul{
    height:32px;
}

div#bottom-panel .navbar-nav > li > a{
    padding: 6px 15px;
    line-height: 19px;
}

div#bottom-panel .navbar-nav > li > a.disabled {
    cursor: not-allowed;
    text-decoration: none;
}

div#bottom-panel .navbar-nav > li.active a,
div#bottom-panel .navbar-nav > li.active a:hover,
div#bottom-panel .navbar-nav > li.active a:focus {
    outline: 0;
}

div#bottom-panel .navbar > ul.tab-headers > li{
    border-right: 1px solid #42484F;
}

.navbar.navbar-dark{
    background-color: #252C33;
    color: #CED3D9;
}

.navbar.navbar-dark .navbar-nav > li > a{
    color: #9FA3A5;
}

.navbar.navbar-dark .navbar-nav > li > a:hover,
.navbar.navbar-dark .navbar-nav > li > a:focus {
    background-color: #1E252B;
    color: #D3D8DA;
}

div#bottom-panel .navbar.navbar-dark .navbar-nav > li.active a,
div#bottom-panel .navbar.navbar-dark .navbar-nav > li.active a:hover,
div#bottom-panel .navbar.navbar-dark .navbar-nav > li.active a:focus {
    background-color: #1A4666;
    color: #EEF0F2;
}

#bottom-panel-content {
   position: relative; /* So we can absolutely position the loading overlay */
   height: 60%;

   flex: auto;
   -webkit-flex: auto;

   display: -webkit-flex;
   display:         flex;
   -webkit-flex-flow: row;
           flex-flow: row;
}

#bottom-left-panel, #bottom-center-panel{
    overflow-y: auto;
    background-color: #FCFCFC;
    display: -webkit-flex;
    display:         flex;
    -webkit-flex-flow: column;
    flex-flow: column;
}

#bottom-left-top, #bottom-center-top {
    min-height: 33px;
}

.pinned-job-count {
    margin-left: 5px;
}

#bottom-left-panel {
    width:260px;
    overflow-y: auto;
}

#bottom-left-bottom > ul {
    margin: 0px;
    padding: 0px;
    line-height:12px;
}

#bottom-left-panel .content-spacer {
    padding-top: 2px;
    padding-bottom: 4px;
}

#bottom-left-panel ul li {
    padding: 0px 0px 0px 5px;
    line-height: 15px;
    word-wrap: break-word;
}

#bottom-left-panel ul li label{
    padding: 0;
    margin: 2px 0px;
}

#bottom-left-panel .star {
    color: #f0ad4e;
}

#bottom-left-panel em.testfail{ color:red;}

#bottom-left-panel .printlines{padding-bottom: 5px;}

#bottom-left-bottom, #bottom-center-bottom {
    overflow: auto;
}

#bottom-center-panel {
    -webkit-flex: 1 6;
    flex: 1 6;
    background-color: #FCFCFC;
    padding:0px;
    min-width: 500px;
}

#bottom-panel nav.navbar.navbar-sub{
    border-top: none;
}

#bottom-center-panel  ul.failure-summary-list{
    padding-left: 0px;
    height:100%;
    overflow: auto;
}

ul.failure-summary-list li {
    padding: 0px 0px 0px 2px;
    font-size: 11px;
    background: #ccfaff;
}

ul.failure-summary-list li .btn-xs {
    font-size: 8px;
}

.failure-summary-line-empty {
    padding: 2px 2px 0px;
    background: #ffffff;
}

.failure-summary-line {
    padding: 2px 2px 0px;
}

.failure-summary-bugs {
    padding: 0px 0px 0px 14px;
}

/* We override global anchor color to replicate TBPL here */
.failure-summary-bugs a {
    color: #0000ee;
}
.failure-summary-bugs a:visited {
    color: purple;
}

.failure-summary-bugs button {
    padding: 2px 3px 1px 3px;
}

/* We override global anchor color to replicate TBPL here */
.show-hide-more {
    padding: 0px 0px 0px 35px;
    color: #0000ee;
}

.shadowed-panel {
    box-shadow: 0px 1px 0px rgba(255, 255, 255, 0.1), 0px 0px 2px 0px rgba(0, 0, 0, 0.8) inset;
    margin:0;
}

/*#bottom-menu {position: absolute; right:0; width: 104px}*/

.overlay{
    position:absolute;
    top: 0;
    left: 0;
    right: 0;
    bottom: 0;
    width:100%;
    height:100%;
    background-color: rgba(242, 242, 242, 0.25);
    z-index: 9999;
    font-size: 30px;
}

.overlay > div{
    position: relative;
    height:100%;
    width:100%;
}

.overlay > div > span{
    position:absolute;
    top: 40%;
    left:45%;
}

.bottom-shadowed-panel-with-pinboard {
    height: calc(100% - 75px);
}

.bottom-shadowed-panel-without-pinboard {
    height: calc(100% - 20px);
}

.bottom-menu-group {
    width: 98px;
    margin-bottom: 5px;
}

.save-btn {
    width: 81px;
}

.save-btn-dropdown {
    width: 18px;
}

.btn-group + .btn + .save-btn-dropdown {
    margin-left: -5px;
}

/*
 * pinboard
 */

#pinboard-panel {
    background-color: #e6eef5;
    color: #252c33;

    flex: auto;
    -webkit-flex: auto;

    display: flex;
    display: -webkit-flex;
    flex-flow: row;
    -webkit-flex-flow: row;
}

#pinboard-panel .header{
    padding-left: 2px;
    height: 18px;
}

.pinboard-preload-txt {
    color: #bfbfbf;
}

.pinboard-related-bug-preload-txt {
    vertical-align: top;
}

#pinned-job-list{
    position: relative;
    flex: auto;
    -webkit-flex: auto;
    margin: 7px 7px 10px;
}

#pinned-job-list .content{
    position: absolute;
    width: 100%;
    height: 100%;
    padding: 2px;
    overflow: auto;
    background-color: #FFFFFF;
}

#pinboard-related-bugs{
    position: relative;
    width: 200px;
    flex: none;
    -webkit-flex: none;
    margin: 7px 7px 10px;
}

#pinboard-related-bugs .content {
    position: absolute;
    height: 100%;
    width: 200px;
    padding: 2px;
    overflow-x: hidden;
    color: black;
    background-color: #FFFFFF;
}

#pinboard-related-bugs a {
    text-decoration: none;
}
/* ... */

